PR/36954: Roland Illig: don't eat backlash escapes in variable patterns. Makes ${line%%\**} work.